Some edits to lie theory chapter

--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -13,7 +13,7 @@
 
 \lettrine{\libertineInitialGlyph{P}}{olynomial} functions are a special type of function. They are related in a natural way to the derivative, they are defined by a finite amount of combinatorial data, and they can be used to approximate any continuous function.
 
-In the same way, the Vassiliev knot invairants are a special type of knot invariant. And this analogy, first made by Dror Barn-Natan in \cite{on-the-vassiliev-knot-invariants} is by no means superficial. As we will come to see, Vassiliev invariants enjoy analogues of the first two properties above, and conjeturally also the third.
+In the same way, the Vassiliev knot invairants are a special type of knot invariant. And this analogy, first made by Dror Bar-Natan in \cite{on-the-vassiliev-knot-invariants} is by no means superficial. As we will come to see, Vassiliev invariants enjoy analogues of the first two properties above, and conjeturally also the third.
 
 In this chapter we give a version of the introductory theory of Vassiliev invariants in which the analogy above is made as explicitly as possible. This also leads a natural interpretation of the defining relations of the algebra \(\mathcal{A}\) which is the fundamental object of study in the field.
 
