--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -3,9 +3,7 @@
 
 The fundamental theorem of Vassiliev invariants states that the bialgebra of Vassiliev invariants can be broken up into nice combinatiorial weight systems. So to understand \(\mathcal{V}\) it suffices to understand \(\mathcal{W}\), or equivalently its dual \(\mathcal{A}\). There is a hint that the structure of \(\mathcal{A}\) may relate to Lie algebras.
 
-% TODO: Try to fix(?) and include the below CDM proof of Milnor-Moore. Update: The (elusive) full proof is in Lescop 2024!
-
-\section{Jacobi diagrams, AS, STU and IHX} %TODO (Zsuzsi) This is a section title in the Dror tradition -- I'd consider just "Jacobi diagrams"
+\section{Jacobi diagrams}
 
 This side of the story reframes the bialgebra \(\mathcal{A}\) as an isomorphic bialgebra known as the algebra of Jacobi diagrams to illuminate the Lie theory connections.
 
@@ -45,7 +43,7 @@ In particular, from the first point, all chord diagrams are unitrivalent diagram
 		\end{equation}
 \end{definition}
 
-As usual, this is not an individual relation but a class of relations, true in any diagrams that are identical except for the subdiagrams being as shown.
+As usual, this is not an individual relation but a class of relations, true in any diagrams that are identical except for the parts shown.
 
 Note that the for the chord diagrams inside the algebra of Jacobi diagrams, the \ref{eq:STU} relations imply the \ref{eq:4T} relations, as
 	\[
@@ -98,18 +96,31 @@ This is well-defined: the proof of Proposition \ref{prop:connected-sum-well-defi
 \end{proposition}
 
 \begin{proof}
-	% TODO: Maybe put some images here.
 	\begin{enumerate}
 		\item
 			Take two diagrams which differ only by \ref{eq:AS} at one (trivalent) vertex. If the vertex at which the \ref{eq:AS} relation resides is adjacent to a univalent vertex (i.e. touches the outer circle), then this is immediate from applying \ref{eq:STU} to both diagrams at that vertex.
+			\[
+				\includegraphics[width=0.05\textwidth, valign=c]{graphics/as_relation_a.pdf}
+				\quad
+				=
+				\quad
+				\includegraphics[width=0.10\textwidth, valign=c]{graphics/stu_relation_u.pdf}
+				\quad
+				-
+				\quad
+				\includegraphics[width=0.10\textwidth, valign=c]{graphics/stu_relation_t.pdf}
+				\quad
+				=
+				\quad
+				-
+				\includegraphics[width=0.05\textwidth, valign=c]{graphics/as_relation_s.pdf}.
+			\]
 
-			If the vertex is not immediately adjacent to a univalent vertex, then it is some \(d\) vertices `in the way'.  %Todo (Zsuzsi) grammar
-            By applying \ref{eq:STU} to those vertices yields a sum of \(2^{d}\) diagrams, all identical except for differing by \ref{eq:AS}, now on a vertex adjacent to a univalent vertex.
+			If the vertex is not immediately adjacent to a univalent vertex, then it has some \(d\) vertices `in the way'. By applying \ref{eq:STU} to those vertices yields a sum of \(2^{d}\) diagrams, all identical except for differing by \ref{eq:AS}, now on a vertex adjacent to a univalent vertex.
 
 		\item
-			A similar argument applies. If one of the two vertices of the \ref{eq:IHX} is adjacent to the circle, then the result is a direct consequence of an \ref{eq:STU} on each of the vertices. Otherwise, some \ref{eq:STU}s may be required first.
-
-        %TODO (Zsuzsi) This proof is essentially a verbal description of pictures. It would be nicer to include and refer to the picture.
+			A similar argument applies. If one of the two vertices of the \ref{eq:IHX} is adjacent to the circle, then the result is a direct consequence of an \ref{eq:STU} on each of the vertices, then some applications of \ref{eq:AS}. Otherwise, some \ref{eq:STU}s are required first.
+			% TODO: (time permitting) figures.
 \end{enumerate}
 \end{proof}
 
@@ -129,9 +140,7 @@ This is well-defined: the proof of Proposition \ref{prop:connected-sum-well-defi
 \end{lemma}
 
 The result is standard, see Chapter 5.2 of \cite{introduction-to-vassiliev-invariants} for a proof.
-% TODO: Maybe I want to prove this.
 
-% TODO: The change of basis assumption here is a liiitle sus.
 We have already spoiled the surprise that in the end, \(\mathcal{A}\) and \(\mathcal{J}\) will be isomorphic as bialgebras. In fact, as algebras, this is clearly true so far, as \(\mathcal{J}\) is just a change of basis from \(\mathcal{A}\). Since \(\mathcal{A}\) spans \(\mathcal{J}\), we can attempt to lift the coproduct from \(\mathcal{A}\) directly onto \(\mathcal{J}\).
 
 \begin{proposition}
@@ -150,25 +159,19 @@ We have already spoiled the surprise that in the end, \(\mathcal{A}\) and \(\mat
 \end{corollary}
 
 \begin{corollary}
-	The bialgebras \(\mathcal{A}\) and \(\mathcal{J}\) are isomorphic. %TODO (Zsuzsi) This might just be me but I wouldn't write $J=A$, because the equal sign is loaded... I'd just say from here on we denote by A both chord diagrams and Jacobi diagrams.
+	The bialgebras \(\mathcal{A}\) and \(\mathcal{J}\) are isomorphic.
 \end{corollary}
 
 \begin{warning}
-	Justified by this isomorphism, we write \(\mathcal{J} = \mathcal{A}\), and \(\mathcal{A}\) is the preferred choice of notation for both chord diagrams and Jacobi diagrams.
+	Justified by this isomorphism, we henceforth write \(\mathcal{A}\), for both chord diagrams and Jacobi diagrams.
 \end{warning}
 
 \section{Lie algebra weight systems}
-Similar diagrammatic relations to \ref{eq:STU}, \ref{eq:AS} and \ref{eq:IHX} satisfied in \(\mathcal{A}\) are appear also in the context of a graphical notation for multilinear maps, a fact which we may exploit to probe \(\mathcal{A}\). Before seeing how, let us review this graphical notation following \cite{wheeling-a-diagrammatic-analogue-of-the-duflo-isomorphism, on-the-rozansky-witten-weight-systems}.
+Similar diagrammatic relations to \ref{eq:STU}, \ref{eq:AS} and \ref{eq:IHX} satisfied in \(\mathcal{A}\) are appear also in the context of a graphical notation for multilinear maps, a fact which we may exploit to probe \(\mathcal{A}\). Before seeing how, let us review this graphical notation following \cite{wheeling-a-diagrammatic-analogue-of-the-duflo-isomorphism, on-the-rozansky-witten-weight-systems}. This diagrammatic calculus is well-known but it goes by many names: string diagram calculus, Penrose calculus, tensor calculus, diagrammatic calculus for tensors, etc. We call them string diagrams.
 
-\begin{remark}
-	This diagrammatic calculus is well-known but it goes by many names: string diagram calculus, Penrose calculus, tensor calculus, diagrammatic calculus for tensors, etc. We call them string diagrams. %TODO (Zsuzsi) I wouldn't necessarily put this in a remark environment, it could be part of your intro paragraph
-\end{remark}
-
-A tensor is a multilinear map \(X_{1} \otimes X_{2} \otimes \cdots \otimes X_{n} \to Y_{1} \otimes Y_{2} \otimes \cdots \otimes Y_{m}\), or equivalently (via the canonical isomorphism) an element of the vector space \(X_{1}^{\ast} \otimes X_{2}^{\ast} \otimes \cdots X_{n}^{\ast} \otimes Y_{1} \otimes Y_{2} \otimes \cdots \otimes Y_{m}\).
-
-A tensor can be represented as a vertex with \(m + n\) unbound directed edges: \(m\) incoming edges decorated by the corresponding vector spaces (in the example above, \(X_{1}, \cdots\)), and \(n\) outgoing edges decordated by \(Y_{1}, \cdots\). For example, the bracket in a Lie algebra \(\mathfrak{g}\) is an element \([\cdot,\cdot] \in \mathfrak{g}^{\ast} \otimes \mathfrak{g}^{\ast} \otimes \mathfrak{g}\), expressed as
+A tensor is a multilinear map \(X_{1} \otimes X_{2} \otimes \cdots \otimes X_{n} \to Y_{1} \otimes Y_{2} \otimes \cdots \otimes Y_{m}\), or equivalently (via the canonical isomorphism) an element of the vector space \(X_{1}^{\ast} \otimes X_{2}^{\ast} \otimes \cdots X_{n}^{\ast} \otimes Y_{1} \otimes Y_{2} \otimes \cdots \otimes Y_{m}\). Such a tensor can be represented as a vertex with \(m + n\) unbound directed edges: \(m\) incoming edges decorated by the corresponding vector spaces (in the example above, \(X_{1}, \cdots\)), and \(n\) outgoing edges decordated by \(Y_{1}, \cdots\). For example, the bracket in a Lie algebra \(\mathfrak{g}\) is an element \([\cdot,\cdot] \in \mathfrak{g}^{\ast} \otimes \mathfrak{g}^{\ast} \otimes \mathfrak{g}\), expressed as
 \[\def\svgscale{0.3} \input{graphics/bracket_string_diagram.pdf_tex}.\]
-In fact, since the relation if true for any elements \(x, y \in \mathfrak{g}\), the labels on the edges can be dropped. %TODO (Zsuzsi) Clarify this sentence
+It will be obvious from each string diagram what tensor it represents so we can drop the edge labels.
 
 Such a notation is useful because composition of tensors can be expressed graphically by connecting outgoing and incoming legs with the same decoration. Relations can therefore be expressed graphically, for example, the antisymmetry of the bracket \([y, x] = -[x, y]\) becomes
 \[
@@ -200,13 +203,13 @@ Looking at the relations these relations in the tensor algebra \(\mathcal{T}(\ma
 
 % TODO: Decide whether we can be bothered to talk about representations also as vertices. We can also just weight systems into U(g) then take traces wrt a rep after.
 
-Furthermore, suppose \(\mathfrak{g}\) is a metric Lie algebra. Then it has an invariant, nondegenerate, bilinear form \(\langle \cdot, \cdot \rangle \in \mathfrak{g}^{\ast} \otimes \mathfrak{g}^{\ast}\). Being nondegenerate, it can be inverted to an element \(c \in \mathfrak{g} \otimes \mathfrak{g}\). We have additional bivalent vertices %TODO (Zsuzsi) "These elements can be diagrammatically represented as additional bivalent vertices"
+Furthermore, suppose \(\mathfrak{g}\) is a metric Lie algebra. Then it has an invariant, nondegenerate, bilinear form \(\langle \cdot, \cdot \rangle \in \mathfrak{g}^{\ast} \otimes \mathfrak{g}^{\ast}\). Being nondegenerate, it can be inverted to an element \(c \in \mathfrak{g} \otimes \mathfrak{g}\). This element is known as the casimir. These tensors can be diagrammatically represented as additional bivalent vertices.
 \[
 	\includegraphics[width=0.06\textwidth, valign=c]{graphics/string_diagram_metric.pdf}
 	\qquad \text{and} \qquad
 	\includegraphics[width=0.06\textwidth, valign=c]{graphics/string_diagram_casimir.pdf}\ .
 \]
-These can be used to change the arrow direction on any edge, allowing us to drop the edge arrows from the notation. %TODO (Zsuzsi) I would add that one way to view this is that the bilinear form induces an isomorphism of g-modules between g and g^*, hence you no longer need to keep track of which is which, hence no need for arrows
+The bilinear form induces an isomorphism of \(\mathfrak{g}\) and \(\mathfrak{g}^{\ast}\). Diagramatically, this can be used to change the arrow direction on any edge, allowing us to drop the edge arrows from the notation. An \(n\)
 
 Moreover, the invariance of the metric can be written as \(\langle [x, y], z \rangle = \langle [y, z], x \rangle\) which graphically can be represented as cyclic invariance of the contraction of the bracket and the metric
 \[
@@ -220,16 +223,15 @@ Moreover, the invariance of the metric can be written as \(\langle [x, y], z \ra
 	\quad
 	\includegraphics[width=0.08\textwidth, valign=c]{graphics/bracket_metric_cyclic_invariance_bracketyz.pdf}.
 \]
-A similar argument works for the casimir. %TODO (Zsuzsi) I think this is the first time you use the word casimir, perhaps introduce it earlier where you first talk about it
+A similar argument works for the casimir.
 
-A representation of \(\mathfrak{g}\) into %TODO I think a representation is "on" not "into" V
-a finite-dimensional vector space \(V\) can be written as a tensor \(\rho \in \mathfrak{g}^{\ast} \otimes V^{\ast} \otimes V\). This takes a new kind of input an output, namely a \(v \in V\) which we denote by a thick line at a shallow angle
+A representation of \(\mathfrak{g}\) on a finite-dimensional vector space \(V\) can be written as a tensor \(\rho \in \mathfrak{g}^{\ast} \otimes V^{\ast} \otimes V\). This takes a new kind of input an output, namely a \(v \in V\) which we denote by a thick line at a shallow angle
 \[
 	\includegraphics[width=0.11\textwidth, valign=c]{graphics/representation_vertex.pdf}.
 \]
-The identity the action is a Lie action, 
-%TODO (Zsuzsi) grammar
-\[\rho([x, y]) = \rho(x)\rho(y) - \rho(y)\rho(x)\] is graphically
+That this action be a Lie action,
+\[\rho([x, y]) = \rho(x)\rho(y) - \rho(y)\rho(x)\]
+is graphically
 \[
 	\includegraphics[width=0.1\textwidth, valign=c]{graphics/string_diagram_lie_action_s.pdf}
 	\quad
